--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,44 @@
-<% if @book.errors.any? %>
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
 
-<h1>Editing Book</h1>
+      <div style="margin-top: 10px;">
+        <h1>Editing Book</h1>
+        
+        <% if @book.errors.any? %>
+        <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+        <% end %>
 
-<%= form_with model: @book, url: book_path(params[:id]), method: :patch do |f| %>
-
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  
-  <%= f.submit 'Update' %>
-  
-  <%= link_to 'Show', book_path(params[:id]) %>
-  <h4>|</h4>
-  <%= link_to 'Back', books_path %>
-  
-<% end %>
+        <%= form_with model: @book, url: book_path(params[:id]), method: :patch do |f| %>
+        
+          <div style="margin-bottom: 10px;">
+            <div>Title</div>
+            <%= f.text_field :title, style: "width: 500px;" %>
+          </div>
+          
+          <div style="margin-bottom: 10px;">
+            <div>Opinion</div>
+            <%= f.text_area :body, style: "width: 500px;" %>
+          </div>
+          
+          <div style="margin-bottom: 10px;">
+            <%= f.submit 'Update Book', class: "btn btn-primary text-white", style: "background-color: green;" %>
+          </div>
+          
+          <div>
+          <%= link_to 'Show', book_path(params[:id]) %>
+          |
+          <%= link_to 'Back', books_path %>
+          </div>
+          
+        <% end %>
+      </div>
+      
+    </div>
+  </div>
+</div>
