--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,9 @@
-<h1>about</h1>
+<div style="margin-top: 20px;">
+  <div class="container">
+    <div class="row">
+        <div class="mx-auto">
+          <h1>welcome to <i class="fa-solid fa-book"></i>Bookers!!</h1>
+        </div>
+    </div>
+  </div>
+</div>
