--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,18 +1,35 @@
-<div class="main">
-    <h1>welcome to Bookers!!</h1>
+<div style="margin-top: 20px">
+    <div class="container">
+      <div class="row">
+          <div class="mx-auto">
+            <h1>welcome to <i class="fa-solid fa-book"></i>Bookers!!</h1>
+            <p>
+              In <i class="fa-solid fa-book"></i><strong>Bookers,</strong></br>
+            </p>
+            <p>
+              you can share and exchange your opinions, inpressions,
+              and emotions<br>
+            </p>
+            <p>
+              about various books!
+            </p>
+            <% if user_signed_in? %>
+              <%= link_to user_path(current_user), method: :get, style: "background-color: #17a2b8; border-color: #17a2b8; color: white; margin: 0 0 20px 40px;", class: "btn btn-primary col-md-11" do %>
+                Log in
+              <% end %>
+              <%= link_to  user_path(current_user), method: :get, style: "background-color: #28a745; border-color: #28a745; color: white; margin-left: 40px;", class: "btn btn-primary col-md-11" do %>　
+                Sign up
+              <% end %>
+            <% else %>
+              <%= link_to new_user_session_path, style: "background-color: #17a2b8; border-color: #17a2b8; color: white; margin: 0 0 20px 40px;", class: "btn btn-primary col-md-11" do %>
+                Log in
+              <% end %>
+              <%= link_to new_user_registration_path, method: :get, style: "background-color: #28a745; border-color: #28a745; color: white; margin-left: 40px", class: "btn btn-primary col-md-11" do %>
+                Sign up
+              <% end %>
+            <% end %>
+        </div>
+      </div>
+    </div>
     
-    <p>
-        In Bookers,</br>
-        you can share and exchange your opinions, inpressions,
-        and emotions</br>
-        about various books!
-    </p>
-    
-    <% if user_signed_in? %>
-        <%= button_to "Log in", user_path(current_user), method: :get %>
-        <%= link_to "Sign up", new_user_registration_path, method: :get %>
-    <% else %>
-        <%= button_to "Log in", new_user_session_path %>
-        <%= link_to "Sign up", new_user_registration_path, method: :get %>
-    <% end %>
 </div>
