--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,61 +12,84 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     
   </head>
-  
-  <body class="d-flex flex-column vh-100">
+  <!--フレックスルボックスの縦並びでvh-100により画面の高さに応じてページの高さが調整される-->
+  <body class="d-flex flex-column">
     <header class="shadow-sm">
       <!--navbar:ナビゲーションバーの表示-->
-      <nav class="navbar">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
+          <%= link_to "Bookers", root_path, class: 'nav-link text-white' %>
           <!--ナビゲーションアイコン-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
           </button>
+          <!--ハンバーガーメニューに隠したいやつはcollapseの中-->
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to "Home", user_path(current_user), class: 'nav-link text-light' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Users', users_path, class: 'nav-link text-light' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Books', books_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
-            </li>          
-            <% else %>
-            <li class="nav-item">
-              <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "About", home_about_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
-            </li>
-            <% end %>
+              
+              <% if user_signed_in? %>
+                <%= link_to user_path(current_user), class: 'nav-link text-white' do %>
+                  <i class="fas fa-home"></i>
+                  Home
+                <% end %>
+                <%= link_to users_path, class: 'nav-link text-white' do %>
+                  <i class="fa-solid fa-users"></i>
+                  Users
+                <% end %>
+                <%= link_to books_path, class: 'nav-link text-white' do %>
+                  <i class="fa-solid fa-book-open"></i>
+                  Books
+                <% end %>
+                <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-white' do %>
+                  <i class="fa-solid fa-right-from-bracket"></i>
+                  Log out
+                <% end %>
+              
+              <% else %>
+                <%= link_to root_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-home"></i> 
+                  Home
+                <% end %>
+                <%= link_to home_about_path, class: 'nav-link text-white' do %>
+                  <i class="fa-solid fa-link"></i>
+                  About
+                <% end %>
+                <%= link_to new_user_registration_path, class: 'nav-link text-white' do %>
+                  <i class="fa-solid fa-user-plus"></i>
+                  Sign up
+                <% end %>
+                <%= link_to new_user_session_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-solid fa-right-to-bracket"></i>
+                  Log in
+                <% end %>
+                
+              <% end %>
             </ul>
           </div>
         </div>
       </nav>
     </header>
     
-    <main class="mb-auto">
+    <main>
     <% flash.each do |message_type, message| %>
-       <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% unless controller_name == 'sessions' && action_name == 'new' %>
+         <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% end %>
     <% end %>      
     <%= yield %>
     </main>
     
-    <footer>
-      <p>CopyRight Infratop.inc</p>
+    <footer style="margin-top: 40px;">
+      <!--mb(margin-bottom5px-->
+      <div class="container">
+        <!--mx-autoで中央寄せさせるために横幅を持たせる-->
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
     </footer>
     
   </body>
