--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -11,26 +11,45 @@
 
 <h2>User info</h2>
 
-<%= image_tag user.get_image %>
+<%= image_tag user.get_image, size: "100x100" %>
 
-<h4>name</h4>
-<%= user.name %>
+<table class="table">
+  <tr>
+  <th>name</th>
+  <th><%= user.name %></th>
+  </tr>
+  <tr>
+  <th>introduction</th>
+  <th><%= user.introduction %></th>
+  </tr>
+</table>
 
-<h4>introduction</h4>
-<%= user.introduction %>
-
-<%= button_to "User edit", edit_user_path(current_user), method: :get %>
-
-<h1>New book</h1>
-
-<%= form_with model: book, url: books_path do |f| %>
-
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  
-  <%= f.submit 'create book' %>
-  
+<% if user == current_user %>
+  <%= link_to edit_user_path(current_user), method: :get, class: "btn btn-outline-secondary col-md-12 text-gray" do %>
+    <i class="fa-solid fa-user-gear"></i>
+  <% end %>
+<% else %>
+  <%= link_to edit_user_path(user), method: :get, class: "btn btn-outline-secondary col-md-12 text-gray" do %>
+    <i class="fa-solid fa-user-gear"></i>
+  <% end %>
 <% end %>
+
+<div style="margin: 10px;">
+  <h1>New book</h1>
+  
+  <%= form_with model: book, url: books_path do |f| %>
+  
+  <div style="margin-bottom: 10px;">
+    <div>Title</div>
+    <%= f.text_field :title %>
+  </div>
+  
+  <div style="margin-bottom: 10px;">
+    <div>Opinion</div>
+    <%= f.text_area :body %>
+  </div>
+
+  <%= f.submit 'Create Book', class: "btn btn-primary", style: "background-color: green;"%>
+    
+  <% end %>
+</div>
