--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,43 @@
-<h1>Users</h1>
-
-<h4>image</h4>
-<h4>name</h4>
-
-<ul>
-  <% @users.each do |user| %>
-    <li><%= image_tag user.get_image %></li>
-    <li><%= user.name %></li>
-    <li><%= link_to "Show", user_path(user.id) %></li>
-  <% end %>
-</ul>
-
-
-<%= render 'list', book: @book, user: @user %>
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-3">
+      <%= render 'users/list', book: @book, user: @user %>
+    </div>
+    
+    <div class="col-md-8 offset-md-1">
+      <table class="table">
+        <thead>
+          <tr>
+             <th>Users</th>
+             <th></th>
+             <th></th>
+          </tr>
+        </thead>
+        
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th></th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= image_tag user.get_image, size: "100x100" %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to "Show", user_path(user.id) %></td>
+            </tr>
+          <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    
+  </div>
+</div>
+      
+      
+      
