--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,33 @@
-<%= render 'list', book: @book, user: @user %>
-
-<h1>Books</h1>
-
-<h4>Title</h4>
-<h4>Opinion</h4>
-
-<ul>
-  <% @books.each do |book| %>
-    <li><%= link_to(image_tag(book.user.get_image), user_path(book.user)) %></li>
-    <li><%= link_to book.title, book_path(book.id) %></li>
-    <li><%= book.body %></li>
-  <% end %>
-</ul>
-
-
+<div style="margin-top: 20px;">
+  <div class="container">
+    <div class="row">
+      
+      <div class="col-md-3">
+        <%= render 'list', book: @book, user: @user %>
+      </div>
+      
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+              <tr>
+                <td><%= link_to(image_tag(book.user.get_image, size: "100x100"), user_path(book.user)) %></td>
+                <td><%= link_to book.title, book_path(book.id) %></td>
+                <td><%= book.body %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      
+    </div>
+  </div>
+</div>
