--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,13 +27,13 @@
                 <td><%= book.body %></td>
                 <% if book.favorited_by?(current_user) %>
                   <td>
-                    <%= link_to book_favorite_path(book), method: :delete do %>
+                    <%= link_to book_favorites_path(book), method: :delete do %>
                       <i class="fa-solid fa-heart" style="color: red;"></i><span class="heart-count"><%= book.favorites.count %></span>
                     <% end %>
                   </td>
                   <% else %>
                   <td>
-                    <%= link_to book_favorite_path(book), method: :post do %>
+                    <%= link_to book_favorites_path(book), method: :post do %>
                       <i class="fa-solid fa-heart"></i><%= book.favorites.count %>
                     <% end %>
                   </td>
